--- a/.gitmodules
+++ b/.gitmodules
@@ -1,33 +1,35 @@
 [submodule "binutils"]
 	path = binutils
-	url = https://sourceware.org/git/binutils-gdb.git
+	url = https://github.com/bminor/binutils-gdb.git
 	branch = binutils-2_40-branch
 [submodule "gcc"]
 	path = gcc
-	url = https://gcc.gnu.org/git/gcc.git
-	branch = releases/gcc-12
+	url = https://github.com/gcc-mirror/gcc.git
+	branch = trunk
 [submodule "glibc"]
 	path = glibc
-	url = https://sourceware.org/git/glibc.git
+	url = https://github.com/bminor/glibc.git
+	branch = glibc-2.37
 [submodule "dejagnu"]
 	path = dejagnu
-	url = https://git.savannah.gnu.org/git/dejagnu.git
-	branch = dejagnu-1.6.3
+	url = https://github.com/lhtin/dejagnu.git
+	branch = main
 [submodule "newlib"]
 	path = newlib
-	url = https://sourceware.org/git/newlib-cygwin.git
-	branch = master
+	url = https://github.com/bminor/newlib.git
+	branch = newlib-4.1.0
 [submodule "gdb"]
 	path = gdb
-	url = https://sourceware.org/git/binutils-gdb.git
+	url = https://github.com/bminor/binutils-gdb.git
 	branch = gdb-12-branch
 [submodule "qemu"]
 	path = qemu
-	url = https://gitlab.com/qemu-project/qemu.git
+	url = https://github.com/qemu/qemu.git
+	branch = v7.1.0
 [submodule "musl"]
 	path = musl
-	url = https://git.musl-libc.org/git/musl
-	branch = master
+	url = https://github.com/bminor/musl.git
+	branch = v1.2.4
 [submodule "spike"]
 	path = spike
 	url = https://github.com/riscv-software-src/riscv-isa-sim.git
